# supercollider

./: .gitignore  AUDIT_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  README_IMPLEMENTATION.md  capabilities_and_tasks.md  check-errors.bat  config_expanded_capabilities.json  dev.bat  diagnose.bat  fix-install.bat  package-lock.json  package.json  setup.bat  start.bat
.claude/: settings.local.json
TASKDEFAULTS/: analysis_tasks.json  generation_tasks.json  integration_tasks.json  optimization_tasks.json  research_tasks.json  transformation_tasks.json  validation_tasks.json
TASKS/: README.md
TODO_CLAUDE/: publickeylist.json  shredder
TOOLS/: tool_definitions.json
client/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  (+1 more)
core/: index.ts
server/: env.example  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: agents.rs  config.rs  execution.rs  mod.rs  projects.rs  queue.rs  tasks.rs  templates.rs  tools.rs
src-tauri/src/models/: mod.rs  tool.rs
src-tauri/src/services/: agent_pool.rs  context_pool.rs  execution_engine.rs  mod.rs  scheduler.rs  simple_executor.rs  simple_executor_enhanced.rs  task_manager.rs  task_runner.rs  task_shredder.rs  tool_manager.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/utils/: error.rs  logging.rs  mod.rs
src-ui/: index-backup.html  index.html  install-deps.bat  package-lock.json  package.json  postcss.config.js  tailwind.config.js  test.html  vite.config.ts
(+259 files in other folders)
